--- a/files/001196/resources/theme/0001/style.css
+++ b/files/001196/resources/theme/0001/style.css
@@ -830,8 +830,9 @@ input,textarea {font-family: 'Hind', sans-serif;display: block; font-size: 16px;
 
 .theme_menu .right-column {
     position: absolute;
-    right: 50px;
-    width: 100px;
+    right: 30px;
+    width: 200px;
+    top: 20%;
 }
 
 
