--- a/files/001196/resources/theme/0001/style.css
+++ b/files/001196/resources/theme/0001/style.css
@@ -841,6 +841,15 @@ input,textarea {font-family: 'Hind', sans-serif;display: block; font-size: 16px;
   position: relative;
   right: 0;
 }
+
+.nav_side_content .thm-btn-tr{
+  margin-top: 44px;
+  position: relative;
+  right: 100px;
+  width: 200px;
+
+}
+
 .nav_side_content .cart_select>button {
   font-size: 14px;
   text-transform: uppercase;
